<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_records"
            android:title="@string/menu_records" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_goals"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_menu_debts"
            android:title="@string/menu_debts" />
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/ic_menu_converter"
            android:title="@string/menu_converter" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
