<?xml version="1.0" encoding="utf-8"?>
<!--
Это документ с разметкой приветственной страницы (загрузки)
Здесь можно изменить внешний вид этой страницы
-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/h1_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:gravity="bottom|center_horizontal|clip_horizontal"
                android:text="@string/hello"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="109dp"
                />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:inputType="textPersonName"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:hint="@string/enter_your_name"
                android:maxLength="28"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:text="@string/go"
                android:onClick="sendMessage"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>