<?xml version="1.0" encoding="utf-8"?>
<!--
Это документ с разметкой главной страницы "Главная" - именно здесь можно менять внешний вид этой страницы
Последние записи выводятся с помощью ListView и RecordsAdapter, подключаемого в  MainActivity
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:background="?attr/colorButtonNormal"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:paddingBottom="@dimen/nav_header_vertical_spacing">


        <TextView
            android:id="@+id/currentBalance"
            style="@style/h1_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="55 500 руб"
            />



        <TextView
            android:id="@+id/balanceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
            android:text="@string/balanceDescription"
            android:textAlignment="center" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">


            <!--style="@style/text_block"-->
        <TableLayout

            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintStart_toStartOf="parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/strExpenses"
                        style="@style/h2_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/strExpenses" />

                    <TextView
                        android:id="@+id/currentExpense"
                        style="@style/h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingLeft="10dp"
                        android:paddingRight="7dp"
                        android:text="10 500 руб."
                        android:layout_weight="1"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/strRevenue"
                        style="@style/h2_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strRevenue"/>

                    <TextView
                        android:id="@+id/currentRevenue"
                        style="@style/h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingLeft="10dp"
                        android:paddingRight="7dp"
                        android:text="40 444 руб."
                        android:layout_weight="1"/>

                </LinearLayout>
            </TableRow>
        </TableLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <!-- style="@style/text_block"-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="12dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/strLastRecords"
                    style="@style/h2_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_span="2"
                    android:gravity="center_vertical|start"
                    android:text="@string/strLastRecords" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <!--android:background="@drawable/border"-->

                <ListView
                    android:id="@+id/lastCostsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/more"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text="ЕЩЕ"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    app:fontFamily="cursive"
                    android:visibility="gone"
                    android:onClick="showAllRecords"/>
            </TableRow>
        </TableLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>